@@ -36,8 +36,8 @@ dnl
 dnl defines: LIBECASOUND_VERSION, LIBECASOUNDC_VERSION, LIBKVUTILS_VERSION
 dnl ---
 
-LIBECASOUND_VERSION=23
-LIBECASOUND_VERSION_AGE=0
+LIBECASOUND_VERSION=24
+LIBECASOUND_VERSION_AGE=1
 LIBECASOUNDC_VERSION=2
 LIBECASOUNDC_VERSION_AGE=1
 LIBKVUTILS_VERSION=9
