@@ -1,3 +1,9 @@
+2012-04-09  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
+
+	* eca-engine.h (ECA_ENGINE): added is_started()
+	* eca-control-main.h (ECA_CONTROL_MAIN): added is_started()
+	* library interface version to 24:0:1
+
 2011-05-11  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
 
         * library interface version 23:0:0 frozen (2.8.0 release)
